# SentinelGUI

./: .gitignore  README.md  create_overlay.py  pyproject.toml  sentinel_gui.py
.github/workflows/: ci.yml  release.yml
packaging/: make_icons.py  sentinelgui.spec
packaging/hooks/: hook-rasterio.py  rthook_gdal.py
packaging/installers/linux/: build-appimage.sh  sentinelgui.desktop
packaging/installers/macos/: build-dmg.sh
packaging/installers/windows/: sentinelgui.iss
src/sentinelgui/: __init__.py  __main__.py  app.py  cli.py  create_overlay.py  sentinel.py  sentinel_gui.py
src/sentinelgui/core/: __init__.py  basemap.py  geo.py  indices.py  models.py  overlay.py  paths.py  processor.py  raster_io.py
src/sentinelgui/ui/: __init__.py  main_window.py  results_viewer.py
src/sentinelgui/ui/tabs/: aoi_tab.py  output_tab.py  processing_tab.py  search_tab.py
src/sentinelgui/ui/theme/: __init__.py  icons.py  tokens.py
src/sentinelgui/ui/widgets/: color_legend.py  log_panel.py  raster_view.py  scene_table.py
src/sentinelgui/workers/: __init__.py  basemap.py  processing.py  search.py
tests/: conftest.py  test_basemap_tiles.py  test_cli.py  test_cli_shims.py  test_entrypoint.py  test_geo.py  test_gui_smoke.py  test_indices.py  test_models.py  test_mosaic.py  test_output_paths_gui.py  test_overlay.py  test_paths.py  test_processing_sequence.py  test_processor_indices.py  test_raster_io.py  test_raster_view_smoke.py  test_results_viewer_smoke.py  test_theme_icons.py  test_theme_qss.py  test_theme_tokens.py
