[project]
name = "sentinelgui"
version = "0.1.1"
description = "Desktop GUI for searching and processing Sentinel-2 COG imagery."
readme = "README.md"
requires-python = ">=3.12"          # rasterio 1.5+ requires >=3.12
dependencies = [
    "PySide6>=6.7",
    "rasterio>=1.5",                # bundles GDAL >=3.8 in the wheel
    "numpy>=2",
    "requests>=2.31",
    "shapely>=2.0",
    "matplotlib>=3.8",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "pyinstaller>=6.10",
]

[project.scripts]
sentinelgui = "sentinelgui.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinelgui"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# core/ tests run headless; the one GUI smoke test sets QT_QPA_PLATFORM=offscreen itself.
